# gob-rs

./: Cargo.toml  decode_goth.go  go.mod  main.go
crates/gob-macro/: Cargo.toml  lib.rs
src/: decode.rs  encode.rs  lib.rs  main.rs  object.rs  ser.rs  types.rs  value.rs  writer.rs
