[package]
name = "gobx"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/gob-macro"]

[dependencies]
thiserror = "1.0"
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
lazy_static = "1.4"
gob-macro = { path = "crates/gob-macro" }
